# just_annotate

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: hello_imgui.cmake  imgui-filebrowser.cmake
include/just_annotate/: annotation_class.h  annotation_class_dialog.h  annotation_store.h  colors.h  config_store.h  hash.h  imgui_util.h  multi_span_widget.h  video_file.h
src/: annotation_class_dialog.cpp  annotation_store.cpp  config_store.cpp  hash.cpp  imgui_util.cpp  main.cpp  video_file.cpp
